--- a/examples/deployment.yaml
+++ b/examples/deployment.yaml
@@ -19,7 +19,7 @@ spec:
         app: echoserver
     spec:
       containers:
-      - image: hashicorp/http-echo:0.2.3
+      - image: hashicorp/http-echo:1.0.0
         imagePullPolicy: Always
         name: echoserver
         command:
@@ -29,3 +29,10 @@ spec:
         - "-text=foo"
         ports:
         - containerPort: 8080
+        resources:
+          requests:
+            cpu: 100m
+            memory: 100Mi
+          limits:
+            cpu: 200m
+            memory: 200Mi
